src/test/ui/macro-context.stderr
error: macro expansion ignores token `;` and any following
  --> $DIR/macro-context.rs:13:15
   |
LL |     () => ( i ; typeof );   //~ ERROR expected expression, found reserved keyword `typeof`
   |               ^
   |
note: caused by the macro expansion here; the usage of `m!` is likely invalid in type context
  --> $DIR/macro-context.rs:20:12
   |
LL |     let a: m!();
   |            ^^^^

error: macro expansion ignores token `typeof` and any following
  --> $DIR/macro-context.rs:13:17
   |
LL |     () => ( i ; typeof );   //~ ERROR expected expression, found reserved keyword `typeof`
   |                 ^^^^^^
   |
note: caused by the macro expansion here; the usage of `m!` is likely invalid in expression context
  --> $DIR/macro-context.rs:21:13
   |
LL |     let i = m!();
   |             ^^^^

error: macro expansion ignores token `;` and any following
  --> $DIR/macro-context.rs:13:15
   |
LL |     () => ( i ; typeof );   //~ ERROR expected expression, found reserved keyword `typeof`
   |               ^
   |
note: caused by the macro expansion here; the usage of `m!` is likely invalid in pattern context
  --> $DIR/macro-context.rs:23:9
   |
LL |         m!() => {}
   |         ^^^^

error: expected expression, found reserved keyword `typeof`
  --> $DIR/macro-context.rs:13:17
   |
LL |     () => ( i ; typeof );   //~ ERROR expected expression, found reserved keyword `typeof`
   |                 ^^^^^^ expected expression
...
LL |     m!();
   |     ----- in this macro invocation

error: aborting due to 4 previous errors

